# crsf-link-openipc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/toolchains/: openipc-armv7-linux-gnueabihf.cmake
deploy/openipc/: S95openipc_ip_bridge  openipc_ip_bridge.env.example  openipc_ip_bridge.init
docs/: DEPLOY_SCRIPT_STEP_BY_STEP.md
include/core/: bridge_app.hpp
include/crsf/: crsf_parser.hpp
include/device/: serial_port.hpp
include/net/: tcp_client.hpp  udp_client.hpp
scripts/: build_openipc_armv7.sh  deploy_openipc_from_host.sh  openipc_direct_eth_bridge.sh
src/: main.cpp
src/core/: bridge_app.cpp
src/crsf/: crsf_parser.cpp
src/device/: serial_port.cpp
src/net/: tcp_client.cpp  udp_client.cpp
